# FalconEngine

./: CMakeLists.txt  CMakePresets.json  README.md  vckpg.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: Build.yml
source/scripts/: FalconEngine.psc
src/: AIPathing.cpp  AIPathing.h  Hooks.cpp  Hooks.h  InputHandler.cpp  InputHandler.h  Main.cpp  MovementHandler.cpp  MovementHandler.h  Papyrus.cpp  Papyrus.h  README.md
trash/: vcpkg-configuration.json
